# matrix_multiplication_performance_comparison

./: .gitignore  MIGRATION_GUIDE.md  PROJECT_STATUS.md  QUICKSTART.md  QUICK_START.md  README.md  README_NEW.md  SIMPLIFICATION_SUMMARY.md  TODO.md  plan.txt  requirements.txt
analysis/: README.md  requirements.txt
analysis/data_processing/: csv_loader.py
analysis/visualization/: plot_speedup.py
c/: EXPERIMENTS.md  Makefile
c/include/: mm.h
c/scripts/: build.sh  run_sweep.sh  slurm_cpu_experiments.sh
c/src/: blocked.c  common.c  main.c  microkernel_avx.c  naive.c
c/src/algorithms/: README.md
c/src/compiler_opt/: README.md
c/src/naive/: README.md
c/src/openmp/: README.md
cpu_vs_gpu/: README.md  benchmarks.yml
cpu_vs_gpu/src/cnn_inference_small/: README.md  build_all.bat  build_all.sh
cpu_vs_gpu/src/cnn_inference_small/cpu/: CMakeLists.txt  main.cpp
cpu_vs_gpu/src/cnn_inference_small/fpga/: Makefile  cnn_kernel.cpp  cnn_kernel.h  host.cpp  run_hls.tcl
cpu_vs_gpu/src/cnn_inference_small/gpu/: CMakeLists.txt  main.cu
cpu_vs_gpu/src/coupled_pde_2d/: README.md  build_all.bat  build_all.sh
cpu_vs_gpu/src/coupled_pde_2d/cpu/: CMakeLists.txt  main.cpp
cpu_vs_gpu/src/coupled_pde_2d/fpga/: Makefile  host.cpp  pde_kernel.cpp  pde_kernel.h  run_hls.tcl
cpu_vs_gpu/src/coupled_pde_2d/gpu/: CMakeLists.txt  main.cu
cpu_vs_gpu/src/pointer_chase/: README.md  build_all.bat  build_all.sh
cpu_vs_gpu/src/pointer_chase/cpu/: CMakeLists.txt  main.cpp
cpu_vs_gpu/src/pointer_chase/fpga/: Makefile  host.cpp  pointer_chase_kernel.cpp  pointer_chase_kernel.h  run_hls.tcl
cpu_vs_gpu/src/pointer_chase/gpu/: CMakeLists.txt  main.cu
cpu_vs_gpu/src/spmv_structured/: README.md  build_all.bat  build_all.sh
cpu_vs_gpu/src/spmv_structured/cpu/: CMakeLists.txt  main.cpp
cpu_vs_gpu/src/spmv_structured/fpga/: Makefile  host.cpp  run_hls.tcl  spmv_kernel.cpp  spmv_kernel.h
cpu_vs_gpu/src/spmv_structured/gpu/: CMakeLists.txt  main.cu
cpu_vs_gpu/src/streaming_stencil_2d/: README.md  build_all.bat  build_all.sh
cpu_vs_gpu/src/streaming_stencil_2d/cpu/: CMakeLists.txt  main.cpp
cpu_vs_gpu/src/streaming_stencil_2d/fpga/: Makefile  host.cpp  run_hls.tcl  stencil_kernel.cpp  stencil_kernel.h
cpu_vs_gpu/src/streaming_stencil_2d/gpu/: CMakeLists.txt  main.cu
docs/: experiments.md  results_summary.md  setup.md
python/: EXPERIMENTS.md  bench.py  plot_results.py  validate.py
python/analysis/: compare_implementations.py
scripts/: build.sh  clean.sh  plot_results.py  run_benchmarks.sh
scripts/benchmark/: run_all_benchmarks.sh
scripts/env/: load_modules.sh  probe_env.sh
scripts/slurm/: benchmark_cuda.sh  benchmark_mpi.sh  benchmark_naive.sh  benchmark_openmp.sh  cpu_job.sh  gpu_job.sh  mpi_job.sh
src/: OPTIMIZATION_PRIORITIES.md  README.md  README_SUMMARY.md  matrix_multiplication.c
src/baseline/: matrix_mult.c
src/cache_opt/: README.md
src/cuda/: Makefile  README.md  REFACTORING_SUMMARY.md  matrix_multiplication.cu  run_benchmarks.sh
src/mpi/: README.md  matrix_mult_mpi.c
src/naive/: README.md  matrix_multiplication.c
src/openmp/: matrix_mult_omp.c
src/optimized/: matrix_mult.c
systemverilog/: matrix_multiplication.sv  matrix_multiplication_tb.sv  matrix_multiplier_tb.sv
visualization/: README.md  ingest.py  make_figures.py  plan.txt  requirements.txt  to_sqlite.py  validate_raw.py
